[package]
name = "sdaa_data"
version = "0.1.0"
edition = "2024"

[lib]
name = "sdaa_data"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
clap = { version = '4.5.37', features = ['derive'] }
rustfft = "6.3.0"
lockfree-object-pool = '0.1.3'
crossbeam = '0.8.4'
rayon = '1.10.0'
chrono = '0.4.40'
num = '0.4.3'
rand = "0.9.1"
rand_distr = '0.5.1'
libc='0.2.172'
sdaa_ctrl = { path = '../sdaa_ctrl' }
ctrlc = "3.4.7"

[build-dependencies]
bindgen = "0.71.1"
cbindgen = "0.29.0"

[profile.release]
opt-level = 3

[features]
default = ["cuda"]
cuda = []

[[bin]]
name = "capture_waterfall"
path = "src/bin/capture_waterfall.rs"
required-features = ["cuda"]

[[bin]]
name = "capture_ddc"
path = "src/bin/capture_ddc.rs"
required-features = ["cuda"]

[[bin]]
name = "benchmark_ddc"
path = "src/bin/benchmark_ddc.rs"
required-features = ["cuda"]
