[[bin]]
name = "capture_waterfall"
path = "src/bin/capture_waterfall.rs"
required-features = ["cuda"]

[[bin]]
name = "capture_ddc"
path = "src/bin/capture_ddc.rs"
required-features = ["cuda"]

[[bin]]
name = "benchmark_ddc"
path = "src/bin/benchmark_ddc.rs"
required-features = ["cuda"]

[build-dependencies]
bindgen = "0.71.1"
cbindgen = "0.29.0"

[dependencies]
chrono = "0.4.41"
crossbeam = "0.8.4"
ctrlc = "3.4.7"
libc = "1.0.0-alpha.1"
lockfree-object-pool = "0.1.6"
num = "0.4.3"
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
rustfft = "6.4.0"

[dependencies.clap]
features = ["derive"]
version = "4.5.41"

[dependencies.sdaa_ctrl]
path = "../sdaa_ctrl"

[features]
cuda = []
default = ["cuda"]

[lib]
crate-type = [
    "staticlib",
    "cdylib",
    "rlib",
]
name = "sdaa_data"

[package]
edition = "2024"
name = "sdaa_data"
version = "0.1.0"

[profile.release]
opt-level = 3
